2005-11-18  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.5.0 for release

2005-11-18  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Few minor KDE updates (Niko Mirthes)
	Fix the alphabetical ordering of some icon names (Niko Mirthes)
	Add links for gtk+/gnome find icons (Rodney Dawes)
	Add links for gtk+/gnome mail message compose icons (Rodney Dawes)
	Add links for more category icons for gnome menus (Rodney Dawes)
	Add a link for gnome-dev-battery the battery device (Rodney Dawes)
	Add a link for stock_printers to the printer device (Rodney Dawes)
	Add a link for the shockwave flash mime type to video (Rodney Dawes)
	Add links for x-office-document, and fill out the links for the
	spreadsheet mime type icon (Rodney Dawes)
	
2005-11-14  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml:
	Fix icon name typos and add updates for some stock icons (Rodney Dawes)
	Add links to some redhat category icons (Steven Garrity)
	Add links for more text formatting icons (David Schroeder)
	Add some updates for KDE icons (Niko Mirthes)
	
2005-11-06  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.4.0 for release

2005-11-06  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add a lot of links for stock icons that
	were missing before, and fix the undo/redo issues
	Updated links for KDE icons from Niko Mirthes
	Add links for dobument-open and properties from Steven Garrity

2005-11-06  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add tar, rar, and tarz for package icon
	Patch from Jakub Steiner

2005-11-02  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add mapping for save icon
	Add links for the stock undo/redo icons in GNOME and GTK+

2005-11-01  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Fix typo for edit-undo

2005-11-01  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Update for more KDE icons, and add the